# ros_ethercat_igh

./: README.md  package.xml
ethercat_master/: CMakeLists.txt  package.xml
ethercat_master/control/: CMakeLists.txt  MainControlLoop.h
ethercat_master/src/: main.cpp
ethercat_master/src/config/io/: pdo.xml  topology.xml
ethercat_master/src/control/: DigitalIO.cpp  DigitalIO.h  Drive.cpp  Drive.h  DriveSdo.cpp  DriveSdo.h  MainControlLoop.cpp  MainControlLoop.h
ethercat_master/src/logic/: Cia402FsmBase.cpp  Cia402FsmBase.h  Cia402FsmData.h  Cia402FsmImpl.cpp  Cia402FsmImpl.h  Cia402FsmTransition.cpp  Cia402FsmTransition.h  DriveDef.h
launch/: ros_ethercat.launch
motion_control/: CMakeLists.txt  package.xml
motion_control/launch/: motion_control.launch
motion_control/msg/: MotorcortexIn.msg  MotorcortexOut.msg
motion_control/scripts/: api_test.py  dio.py  drive.py  test_SDO_get_n_set.py  test_ctrl.py  test_get_SDO.py  test_restore_params.py  test_save_params.py  test_set_SDO.py
motion_control/src/: motorcortex_ros_controller.py
motion_control/src/motorcortex_api/motorcortex-msg/: motionSL_hash.json  motionSL_pb2.py
motorcortex_msgs/: CMakeLists.txt  package.xml
motorcortex_msgs/msg/: DigitalInputs.msg  DigitalInputsList.msg  DigitalOutputs.msg  DigitalOutputsList.msg  DriveIn.msg  DriveInList.msg  DriveOutList.msg  PositionControllerCfg.msg  TorqueControllerCfg.msg  VelocityControllerCfg.msg
motorcortex_msgs/srv/: GetSDOCfg.srv  RestoreCfgParams.srv  SaveCfgParams.srv  SetSDOCfg.srv
motorcortex_ros/: CMakeLists.txt  package.xml
motorcortex_ros/msg/: MotorcortexIn.msg  MotorcortexInList.msg  MotorcortexOutList.msg
motorcortex_ros/src/: motorcortex_ros_controller.py  test_ctrl.py
motorcortex_ros/src/motorcortex-msg/: motorcortex_hash.json
ros_ethercat/: package.xml
ros_ethercat_igh/: CMakeLists.txt  package.xml
src/: api_test.py  drive.py  motorcortex_ros_controller.py
src/motorcortex-msg/: motorcortex_pb2.py
src/test_master/: main.cpp
src/test_master/config/io/: pdo.xml
src/test_master/control/: MainControlLoop.cpp
