<?xml version="1.0"?>
<package format="2">
  <name>ethercat_master</name>
  <version>0.0.0</version>
  <description>EtherCAT Master Server package based on IgH and Motorcortex libraries</description>

  <maintainer email="vtretyakov@synapticon.com">Slava Tretyakov</maintainer>
  <maintainer email="alexey.zakharov@vectioneer.com">Alexey Zakharov</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>motion_control</build_depend>
  <build_depend>roslib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>motion_control</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
