<?xml version="1.0"?>
<package format="2">
  <name>ethercat_master</name>
  <version>0.1.0</version>
  <description>EtherCAT Master Server package based on EtherLab IgH and Motorcortex(T) libraries</description>

  <author email="viatcheslav.tretyakov@gmail.com">Viatcheslav Tretyakov</author>
  <author email="alexey.zakharov@vectioneer.com">Alexey Zakharov</author>

  <maintainer email="support@synapticon.com">Synapticon GmbH</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>motorcortex_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>motorcortex_msgs</exec_depend>

</package>
