<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>0.1.0</version>
  <description>ROS EtherCAT package based on IgH EtherCAT Master for Linux and Motorcortex Core Library</description>

  <author email="viatcheslav.tretyakov@gmail.com">Viatcheslav Tretyakov</author>
  <author email="alexey.zakharov@vectioneer.com">Alexey Zakharov</author>

  <maintainer email="support@synapticon.com">Synapticon GmbH</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
