<?xml version="1.0"?>
<package format="2">
  <name>motorcortex_msgs</name>
  <version>0.0.0</version>
  <description>
    generic Motorcortex messages for communicating with EtherCAT slave devices
  </description>

  <maintainer email="vtretyakov@synapticon.com">Slava Tretyakov</maintainer>
  <maintainer email="alexey.zakharov@vectioneer.com">Alexey Zakharov</maintainer>
  
  <license>TODO</license>

  <author email="support@synapticon.com">Synapticon GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
