<?xml version="1.0"?>
<package format="2">
  <name>motorcortex_msgs</name>
  <version>0.1.0</version>
  <description>
    generic Motorcortex messages for communicating with EtherCAT slave devices
  </description>

  <author email="viatcheslav.tretyakov@gmail.com">Viatcheslav Tretyakov</author>
  <author email="alexey.zakharov@vectioneer.com">Alexey Zakharov</author>

  <maintainer email="support@synapticon.com">Synapticon GmbH</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
