<?xml version="1.0"?>
<package format="2">
  <name>ros_ethercat_igh</name>
  <version>0.1.0</version>
  <description>
    ROS EtherCAT IgH meta-package
  </description>

  <author email="viatcheslav.tretyakov@gmail.com">Viatcheslav Tretyakov</author>
  <author email="alexey.zakharov@vectioneer.com">Alexey Zakharov</author>

  <maintainer email="support@synapticon.com">Synapticon GmbH</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ethercat_master</exec_depend>
  <exec_depend>motion_control</exec_depend>
  <exec_depend>motorcortex_msgs</exec_depend>

  <export><metapackage/></export>
</package>

